--- a/MizitoAdder/MizitoAdder.csproj
+++ b/MizitoAdder/MizitoAdder.csproj
@@ -12,4 +12,10 @@
 	  <PackageReference Include="ClosedXML" Version="0.105.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Update="ImportTemplate.xlsx">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
+
 </Project>
