App Publish Created

--- a/MizitoAdder/MizitoAdder.csproj
+++ b/MizitoAdder/MizitoAdder.csproj
@@ -6,7 +6,13 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<UseWindowsForms>true</UseWindowsForms>
+		<ApplicationIcon>favicon.ico</ApplicationIcon>
+		<SignAssembly>False</SignAssembly>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <Content Include="favicon.ico" />
+	</ItemGroup>
 
 	<ItemGroup>
 	  <PackageReference Include="ClosedXML" Version="0.105.0" />
